--- a/sysctl/sysctl.conf
+++ b/sysctl/sysctl.conf
@@ -16,14 +16,16 @@ net.core.default_qdisc = fq_codel
 net.core.dev_weight = 64
 net.core.netdev_budget = 300
 net.core.netdev_max_backlog = 262144
-net.core.optmem_max = 25165824
-net.core.rmem_default = 31457280
-net.core.rmem_max = 67108864
+net.core.optmem_max = 16777216
+net.core.rmem_default = 262144
+net.core.rmem_max = 16777216
 net.core.somaxconn = 65535
-net.core.wmem_default = 31457280
-net.core.wmem_max = 67108864
+net.core.wmem_default = 262144
+net.core.wmem_max = 16777216
 net.ipv4.conf.all.accept_redirects = 1
 net.ipv4.conf.all.accept_source_route = 1
+net.ipv4.conf.all.arp_filter = 1
+net.ipv4.conf.all.arp_ignore = 1
 net.ipv4.conf.all.forwarding = 1
 net.ipv4.conf.all.log_martians = 0
 net.ipv4.conf.all.rp_filter = 0
@@ -61,8 +63,9 @@ net.ipv4.tcp_keepalive_probes = 5
 net.ipv4.tcp_keepalive_time = 300
 net.ipv4.tcp_low_latency = 1
 net.ipv4.tcp_max_orphans = 16384
-net.ipv4.tcp_max_syn_backlog = 1024
+net.ipv4.tcp_max_syn_backlog = 16384
 net.ipv4.tcp_max_tw_buckets = 1440000
+net.ipv4.tcp_mem = 65536 131072 262144 
 net.ipv4.tcp_moderate_rcvbuf = 1
 net.ipv4.tcp_mtu_probing = 1
 net.ipv4.tcp_notsent_lowat = 16384
@@ -70,16 +73,17 @@ net.ipv4.tcp_no_metrics_save = 1
 net.ipv4.tcp_orphan_retries = 0
 net.ipv4.tcp_reordering = 3
 net.ipv4.tcp_rfc1337 = 1
-net.ipv4.tcp_rmem = 10240 87380 67108864
-net.ipv4.tcp_sack = 1
+net.ipv4.tcp_rmem = 4096 87380 16777216
+net.ipv4.tcp_sack = 0
 net.ipv4.tcp_slow_start_after_idle = 0
 net.ipv4.tcp_synack_retries = 4
 net.ipv4.tcp_syncookies = 0
 net.ipv4.tcp_syn_retries = 5
-net.ipv4.tcp_timestamps = 1
+net.ipv4.tcp_timestamps = 0
 net.ipv4.tcp_tw_reuse = 1
 net.ipv4.tcp_window_scaling = 1
-net.ipv4.tcp_wmem = 10240 87380 67108864
+net.ipv4.tcp_wmem = 4096 65536 16777216
+net.ipv4.udp_mem = 65536 131072 262144 
 net.ipv4.udp_rmem_min = 16384
 net.ipv4.udp_wmem_min = 16384
 net.ipv6.conf.all.disable_ipv6 = 1
@@ -101,4 +105,4 @@ vm.overcommit_ratio = 50
 vm.stat_interval = 10
 vm.swappiness = 30
 vm.vfs_cache_pressure = 60
-vm/min_free_kbytes = 32768
+vm/min_free_kbytes = 131072
