--- a/sysctl/sysctl.conf
+++ b/sysctl/sysctl.conf
@@ -15,12 +15,12 @@ net.core.busy_read = 50
 net.core.default_qdisc = fq_codel
 net.core.dev_weight = 64
 net.core.netdev_budget = 300
-net.core.netdev_max_backlog = 262144
-net.core.optmem_max = 16777216
-net.core.rmem_default = 262144
+net.core.netdev_max_backlog = 32768
+net.core.optmem_max = 262144
+net.core.rmem_default = 1048576
 net.core.rmem_max = 16777216
-net.core.somaxconn = 65535
-net.core.wmem_default = 262144
+net.core.somaxconn = 65536
+net.core.wmem_default = 1048576
 net.core.wmem_max = 16777216
 net.ipv4.conf.all.accept_redirects = 1
 net.ipv4.conf.all.accept_source_route = 1
@@ -63,7 +63,7 @@ net.ipv4.tcp_keepalive_probes = 5
 net.ipv4.tcp_keepalive_time = 300
 net.ipv4.tcp_low_latency = 1
 net.ipv4.tcp_max_orphans = 16384
-net.ipv4.tcp_max_syn_backlog = 16384
+net.ipv4.tcp_max_syn_backlog = 8192
 net.ipv4.tcp_max_tw_buckets = 1440000
 net.ipv4.tcp_moderate_rcvbuf = 1
 net.ipv4.tcp_mtu_probing = 1
@@ -103,4 +103,4 @@ vm.overcommit_ratio = 50
 vm.stat_interval = 10
 vm.swappiness = 30
 vm.vfs_cache_pressure = 60
-vm/min_free_kbytes = 131072
+vm/min_free_kbytes = 65536
