--- a/sysctl/sysctl.conf
+++ b/sysctl/sysctl.conf
@@ -15,12 +15,12 @@ net.core.busy_read = 50
 net.core.default_qdisc = fq_codel
 net.core.dev_weight = 64
 net.core.netdev_budget = 300
-net.core.netdev_max_backlog = 32768
+net.core.netdev_max_backlog = 16384
 net.core.optmem_max = 262144
-net.core.rmem_default = 1048576
+net.core.rmem_default = 262144
 net.core.rmem_max = 16777216
 net.core.somaxconn = 65536
-net.core.wmem_default = 1048576
+net.core.wmem_default = 262144
 net.core.wmem_max = 16777216
 net.ipv4.conf.all.accept_redirects = 1
 net.ipv4.conf.all.accept_source_route = 1
@@ -63,7 +63,7 @@ net.ipv4.tcp_keepalive_probes = 5
 net.ipv4.tcp_keepalive_time = 300
 net.ipv4.tcp_low_latency = 1
 net.ipv4.tcp_max_orphans = 16384
-net.ipv4.tcp_max_syn_backlog = 8192
+net.ipv4.tcp_max_syn_backlog = 16384
 net.ipv4.tcp_max_tw_buckets = 1440000
 net.ipv4.tcp_moderate_rcvbuf = 1
 net.ipv4.tcp_mtu_probing = 1
@@ -73,12 +73,12 @@ net.ipv4.tcp_orphan_retries = 0
 net.ipv4.tcp_reordering = 3
 net.ipv4.tcp_rfc1337 = 1
 net.ipv4.tcp_rmem = 4096 87380 16777216
-net.ipv4.tcp_sack = 0
+net.ipv4.tcp_sack = 1
 net.ipv4.tcp_slow_start_after_idle = 0
 net.ipv4.tcp_synack_retries = 4
 net.ipv4.tcp_syncookies = 0
 net.ipv4.tcp_syn_retries = 5
-net.ipv4.tcp_timestamps = 0
+net.ipv4.tcp_timestamps = 1
 net.ipv4.tcp_tw_reuse = 1
 net.ipv4.tcp_window_scaling = 1
 net.ipv4.tcp_wmem = 4096 65536 16777216
