--- a/sysctl/sysctl.conf
+++ b/sysctl/sysctl.conf
@@ -1,4 +1,5 @@
 fs.file-max = 2097152
+fs.nr_open = 2097152
 fs.suid_dumpable = 0
 kernel.core_uses_pid = 1
 kernel.hung_task_timeout_secs = 600
@@ -16,12 +17,12 @@ net.core.default_qdisc = fq_codel
 net.core.dev_weight = 64
 net.core.netdev_budget = 300
 net.core.netdev_max_backlog = 16384
-net.core.optmem_max = 262144
-net.core.rmem_default = 1048576
-net.core.rmem_max = 67108864
-net.core.somaxconn = 65536
-net.core.wmem_default = 1048576
-net.core.wmem_max = 67108864
+net.core.optmem_max = 16777216
+net.core.rmem_default = 262144
+net.core.rmem_max = 16777216
+net.core.somaxconn = 32768
+net.core.wmem_default = 262144
+net.core.wmem_max = 16777216
 net.ipv4.conf.all.accept_redirects = 1
 net.ipv4.conf.all.accept_source_route = 1
 net.ipv4.conf.all.arp_filter = 1
@@ -57,7 +58,7 @@ net.ipv4.tcp_congestion_control = bbr
 net.ipv4.tcp_dsack = 0
 net.ipv4.tcp_fack = 0
 net.ipv4.tcp_fastopen = 3
-net.ipv4.tcp_fin_timeout = 10
+net.ipv4.tcp_fin_timeout = 15
 net.ipv4.tcp_keepalive_intvl = 15
 net.ipv4.tcp_keepalive_probes = 5
 net.ipv4.tcp_keepalive_time = 300
@@ -67,21 +68,21 @@ net.ipv4.tcp_max_syn_backlog = 16384
 net.ipv4.tcp_max_tw_buckets = 1440000
 net.ipv4.tcp_moderate_rcvbuf = 1
 net.ipv4.tcp_mtu_probing = 1
-net.ipv4.tcp_notsent_lowat = 16384
 net.ipv4.tcp_no_metrics_save = 1
+net.ipv4.tcp_notsent_lowat = 16384
 net.ipv4.tcp_orphan_retries = 0
 net.ipv4.tcp_reordering = 3
 net.ipv4.tcp_rfc1337 = 1
-net.ipv4.tcp_rmem = 10240 87380 67108864
+net.ipv4.tcp_rmem = 1024 4096 16777216
 net.ipv4.tcp_sack = 0
 net.ipv4.tcp_slow_start_after_idle = 0
+net.ipv4.tcp_syn_retries = 5
 net.ipv4.tcp_synack_retries = 4
 net.ipv4.tcp_syncookies = 0
-net.ipv4.tcp_syn_retries = 5
 net.ipv4.tcp_timestamps = 0
 net.ipv4.tcp_tw_reuse = 1
 net.ipv4.tcp_window_scaling = 1
-net.ipv4.tcp_wmem = 10240 87380 67108864
+net.ipv4.tcp_wmem = 1024 4096 16777216
 net.ipv4.udp_rmem_min = 16384
 net.ipv4.udp_wmem_min = 16384
 net.ipv6.conf.all.disable_ipv6 = 1
