--- a/sysctl/sysctl.conf
+++ b/sysctl/sysctl.conf
@@ -76,7 +76,7 @@ net.ipv4.tcp_sack = 0
 net.ipv4.tcp_slow_start_after_idle = 0
 net.ipv4.tcp_synack_retries = 2
 net.ipv4.tcp_syncookies = 0
-net.ipv4.tcp_syn_retries = 5
+net.ipv4.tcp_syn_retries = 6
 net.ipv4.tcp_timestamps = 0
 net.ipv4.tcp_tw_reuse = 1
 net.ipv4.tcp_window_scaling = 1
@@ -101,10 +101,10 @@ net.nf_conntrack_max = 1048576
 vm.dirty_background_ratio = 10
 vm.dirty_ratio = 30
 vm.max_map_count = 262144
+vm.min_free_kbytes = 135168
 vm.mmap_min_addr = 4096
 vm.overcommit_memory = 0
 vm.overcommit_ratio = 50
 vm.stat_interval = 10
 vm.swappiness = 30
 vm.vfs_cache_pressure = 60
-vm/min_free_kbytes = 65536
