--- a/sysctl/sysctl.conf
+++ b/sysctl/sysctl.conf
@@ -7,8 +7,8 @@ kernel.msgmax = 65536
 kernel.msgmnb = 65536
 kernel.nmi_watchdog = 0
 kernel.sched_rt_runtime_us = -1
-kernel.shmall = 1073741824
-kernel.shmmax = 4398046511104
+kernel.shmall = 2097152
+kernel.shmmax = 4294967295
 kernel.sysrq = 0
 kernel.timer_migration = 0
 net.core.busy_poll = 50
@@ -16,12 +16,12 @@ net.core.busy_read = 50
 net.core.default_qdisc = fq_codel
 net.core.dev_weight = 64
 net.core.netdev_budget = 300
-net.core.netdev_max_backlog = 8192
+net.core.netdev_max_backlog = 262144
 net.core.optmem_max = 16777216
-net.core.rmem_default = 262144
+net.core.rmem_default = 16777216
 net.core.rmem_max = 16777216
-net.core.somaxconn = 16384
-net.core.wmem_default = 262144
+net.core.somaxconn = 65536
+net.core.wmem_default = 16777216
 net.core.wmem_max = 16777216
 net.ipv4.conf.all.accept_redirects = 1
 net.ipv4.conf.all.accept_source_route = 1
@@ -61,8 +61,8 @@ net.ipv4.tcp_keepalive_intvl = 15
 net.ipv4.tcp_keepalive_probes = 5
 net.ipv4.tcp_keepalive_time = 300
 net.ipv4.tcp_low_latency = 1
-net.ipv4.tcp_max_orphans = 65536
-net.ipv4.tcp_max_syn_backlog = 4096
+net.ipv4.tcp_max_orphans = 1048576
+net.ipv4.tcp_max_syn_backlog = 65535
 net.ipv4.tcp_max_tw_buckets = 262144
 net.ipv4.tcp_moderate_rcvbuf = 1
 net.ipv4.tcp_mtu_probing = 1
@@ -77,10 +77,10 @@ net.ipv4.tcp_slow_start_after_idle = 0
 net.ipv4.tcp_synack_retries = 2
 net.ipv4.tcp_syncookies = 0
 net.ipv4.tcp_syn_retries = 5
-net.ipv4.tcp_timestamps = 1
+net.ipv4.tcp_timestamps = 0
 net.ipv4.tcp_tw_reuse = 1
 net.ipv4.tcp_window_scaling = 1
-net.ipv4.tcp_wmem = 4096 16384 16777216
+net.ipv4.tcp_wmem = 4096 65535 16777216
 net.ipv4.udp_rmem_min = 16384
 net.ipv4.udp_wmem_min = 16384
 net.ipv6.conf.all.disable_ipv6 = 1
@@ -101,7 +101,7 @@ net.nf_conntrack_max = 1048576
 vm.dirty_background_ratio = 10
 vm.dirty_ratio = 30
 vm.max_map_count = 262144
-vm.min_free_kbytes = 135168
+vm.min_free_kbytes = 65536
 vm.mmap_min_addr = 4096
 vm.overcommit_memory = 0
 vm.overcommit_ratio = 50
