--- a/sysctl/sysctl.conf
+++ b/sysctl/sysctl.conf
@@ -18,10 +18,10 @@ net.core.dev_weight = 64
 net.core.netdev_budget = 300
 net.core.netdev_max_backlog = 262144
 net.core.optmem_max = 16777216
-net.core.rmem_default = 1048576
+net.core.rmem_default = 262144
 net.core.rmem_max = 16777216
 net.core.somaxconn = 65536
-net.core.wmem_default = 1048576
+net.core.wmem_default = 262144
 net.core.wmem_max = 16777216
 net.ipv4.conf.all.accept_redirects = 1
 net.ipv4.conf.all.accept_source_route = 1
@@ -80,7 +80,7 @@ net.ipv4.tcp_syn_retries = 5
 net.ipv4.tcp_timestamps = 0
 net.ipv4.tcp_tw_reuse = 1
 net.ipv4.tcp_window_scaling = 1
-net.ipv4.tcp_wmem = 4096 16384 16777216
+net.ipv4.tcp_wmem = 4096 65536 16777216
 net.ipv4.udp_rmem_min = 16384
 net.ipv4.udp_wmem_min = 16384
 net.ipv6.conf.all.disable_ipv6 = 1
