--- a/sysctl/sysctl.conf
+++ b/sysctl/sysctl.conf
@@ -18,10 +18,10 @@ net.core.dev_weight = 64
 net.core.netdev_budget = 300
 net.core.netdev_max_backlog = 262144
 net.core.optmem_max = 16777216
-net.core.rmem_default = 262144
+net.core.rmem_default = 4194304
 net.core.rmem_max = 16777216
 net.core.somaxconn = 65536
-net.core.wmem_default = 262144
+net.core.wmem_default = 4194304
 net.core.wmem_max = 16777216
 net.ipv4.conf.all.accept_redirects = 1
 net.ipv4.conf.all.accept_source_route = 1
