--- a/sysctl/sysctl.conf
+++ b/sysctl/sysctl.conf
@@ -17,12 +17,12 @@ net.core.default_qdisc = fq_codel
 net.core.dev_weight = 64
 net.core.netdev_budget = 300
 net.core.netdev_max_backlog = 262144
-net.core.optmem_max = 16777216
+net.core.optmem_max = 4194304
 net.core.rmem_default = 262144
-net.core.rmem_max = 16777216
+net.core.rmem_max = 4194304
 net.core.somaxconn = 32768
 net.core.wmem_default = 262144
-net.core.wmem_max = 16777216
+net.core.wmem_max = 4194304
 net.ipv4.conf.all.accept_redirects = 1
 net.ipv4.conf.all.accept_source_route = 1
 net.ipv4.conf.all.arp_ignore = 1
@@ -56,16 +56,17 @@ net.ipv4.tcp_challenge_ack_limit = 1073741823
 net.ipv4.tcp_congestion_control = bbr
 net.ipv4.tcp_dsack = 1
 net.ipv4.tcp_fack = 1
-net.ipv4.tcp_fastopen = 3
+net.ipv4.tcp_fastopen = 1
 net.ipv4.tcp_fin_timeout = 10
 net.ipv4.tcp_keepalive_intvl = 15
 net.ipv4.tcp_keepalive_probes = 5
 net.ipv4.tcp_keepalive_time = 300
-net.ipv4.tcp_low_latency = 0
+net.ipv4.tcp_low_latency = 1
 net.ipv4.tcp_max_orphans = 16384
 net.ipv4.tcp_max_syn_backlog = 32768
 net.ipv4.tcp_max_tw_buckets = 262144
 net.ipv4.tcp_moderate_rcvbuf = 1
+net.ipv4.tcp_mtu_probing = 0
 net.ipv4.tcp_no_metrics_save = 0
 net.ipv4.tcp_orphan_retries = 0
 net.ipv4.tcp_reordering = 3
@@ -73,10 +74,10 @@ net.ipv4.tcp_rfc1337 = 1
 net.ipv4.tcp_rmem = 4096 87380 16777216
 net.ipv4.tcp_sack = 1
 net.ipv4.tcp_slow_start_after_idle = 0
+net.ipv4.tcp_syn_retries = 5
 net.ipv4.tcp_synack_retries = 2
 net.ipv4.tcp_syncookies = 0
-net.ipv4.tcp_syn_retries = 6
-net.ipv4.tcp_timestamps = 1
+net.ipv4.tcp_timestamps = 0
 net.ipv4.tcp_tw_reuse = 1
 net.ipv4.tcp_window_scaling = 1
 net.ipv4.tcp_wmem = 4096 65536 16777216
