--- a/sysctl/sysctl.conf
+++ b/sysctl/sysctl.conf
@@ -6,6 +6,7 @@ kernel.hung_task_timeout_secs = 600
 kernel.msgmax = 65536
 kernel.msgmnb = 65536
 kernel.nmi_watchdog = 0
+kernel.numa_balancing = 0
 kernel.sched_rt_runtime_us = -1
 kernel.shmall = 2097152
 kernel.shmmax = 4294967295
@@ -62,7 +63,7 @@ net.ipv4.tcp_keepalive_intvl = 15
 net.ipv4.tcp_keepalive_probes = 5
 net.ipv4.tcp_keepalive_time = 300
 net.ipv4.tcp_limit_output_bytes = 262144
-net.ipv4.tcp_low_latency = 0
+net.ipv4.tcp_low_latency = 1
 net.ipv4.tcp_max_orphans = 16384
 net.ipv4.tcp_max_syn_backlog = 32768
 net.ipv4.tcp_max_tw_buckets = 262144
@@ -77,7 +78,7 @@ net.ipv4.tcp_sack = 1
 net.ipv4.tcp_slow_start_after_idle = 0
 net.ipv4.tcp_synack_retries = 3
 net.ipv4.tcp_syncookies = 0
-net.ipv4.tcp_syn_retries = 6
+net.ipv4.tcp_syn_retries = 5
 net.ipv4.tcp_timestamps = 1
 net.ipv4.tcp_tw_reuse = 1
 net.ipv4.tcp_window_scaling = 1
@@ -97,8 +98,8 @@ net.netfilter.nf_conntrack_tcp_timeout_syn_recv = 30
 net.netfilter.nf_conntrack_tcp_timeout_syn_sent = 30
 net.netfilter.nf_conntrack_tcp_timeout_time_wait = 30
 net.nf_conntrack_max = 1048576
-vm.dirty_background_ratio = 10
-vm.dirty_ratio = 30
+vm.dirty_background_ratio = 3
+vm.dirty_ratio = 10
 vm.stat_interval = 10
-vm.swappiness = 30
-vm.vfs_cache_pressure = 60
+vm.swappiness = 10
+vm.vfs_cache_pressure = 50
