--- a/sysctl/sysctl.conf
+++ b/sysctl/sysctl.conf
@@ -13,15 +13,15 @@ kernel.sysrq = 0
 kernel.timer_migration = 0
 net.core.busy_poll = 50
 net.core.busy_read = 50
-net.core.default_qdisc = fq_codel
+net.core.default_qdisc = fq
 net.core.dev_weight = 64
 net.core.netdev_budget = 300
 net.core.netdev_max_backlog = 262144
 net.core.optmem_max = 16777216
-net.core.rmem_default = 262144
+net.core.rmem_default = 87380
 net.core.rmem_max = 6291456
 net.core.somaxconn = 32768
-net.core.wmem_default = 262144
+net.core.wmem_default = 65536
 net.core.wmem_max = 4194304
 net.ipv4.conf.all.accept_redirects = 1
 net.ipv4.conf.all.accept_source_route = 1
@@ -81,7 +81,7 @@ net.ipv4.tcp_syn_retries = 5
 net.ipv4.tcp_timestamps = 1
 net.ipv4.tcp_tw_reuse = 1
 net.ipv4.tcp_window_scaling = 1
-net.ipv4.tcp_wmem = 4096 16384 16777216
+net.ipv4.tcp_wmem = 4096 65536 16777216
 net.ipv4.udp_rmem_min = 16384
 net.ipv4.udp_wmem_min = 16384
 net.ipv6.conf.all.disable_ipv6 = 1
