--- a/sysctl/sysctl.conf
+++ b/sysctl/sysctl.conf
@@ -7,15 +7,15 @@ kernel.sysrq = 0
 kernel.timer_migration = 0
 net.core.busy_poll = 50
 net.core.busy_read = 50
-net.core.default_qdisc = fq_codel
+net.core.default_qdisc = fq
 net.core.dev_weight = 64
 net.core.netdev_budget = 300
 net.core.netdev_max_backlog = 262144
 net.core.optmem_max = 16777216
-net.core.rmem_default = 87380
+net.core.rmem_default = 262144
 net.core.rmem_max = 16777216
 net.core.somaxconn = 16384
-net.core.wmem_default = 65536
+net.core.wmem_default = 262144
 net.core.wmem_max = 16777216
 net.ipv4.conf.all.accept_redirects = 1
 net.ipv4.conf.all.accept_source_route = 1
