--- a/sysctl/sysctl.conf
+++ b/sysctl/sysctl.conf
@@ -11,12 +11,12 @@ net.core.default_qdisc = fq
 net.core.dev_weight = 64
 net.core.netdev_budget = 300
 net.core.netdev_max_backlog = 262144
-net.core.optmem_max = 1048576
+net.core.optmem_max = 524288
 net.core.rmem_default = 87380
-net.core.rmem_max = 1048576
+net.core.rmem_max = 524288
 net.core.somaxconn = 16384
 net.core.wmem_default = 65536
-net.core.wmem_max = 1048576
+net.core.wmem_max = 524288
 net.ipv4.conf.all.accept_redirects = 1
 net.ipv4.conf.all.accept_source_route = 1
 net.ipv4.conf.all.arp_ignore = 1
