--- a/sysctl/sysctl.conf
+++ b/sysctl/sysctl.conf
@@ -11,12 +11,12 @@ net.core.default_qdisc = fq
 net.core.dev_weight = 64
 net.core.netdev_budget = 300
 net.core.netdev_max_backlog = 32768
-net.core.optmem_max = 16777216
+net.core.optmem_max = 262144
 net.core.rmem_default = 262144
-net.core.rmem_max = 16777216
+net.core.rmem_max = 262144
 net.core.somaxconn = 16384
 net.core.wmem_default = 262144
-net.core.wmem_max = 16777216
+net.core.wmem_max = 262144
 net.ipv4.conf.all.accept_redirects = 1
 net.ipv4.conf.all.accept_source_route = 1
 net.ipv4.conf.all.arp_ignore = 1
