--- a/sysctl/sysctl.conf
+++ b/sysctl/sysctl.conf
@@ -7,7 +7,7 @@ kernel.sysrq = 0
 kernel.timer_migration = 0
 net.core.busy_poll = 50
 net.core.busy_read = 50
-net.core.default_qdisc = fq
+net.core.default_qdisc = fq_codel
 net.core.dev_weight = 64
 net.core.netdev_budget = 300
 net.core.netdev_max_backlog = 262144
