--- a/service/mysterium.service
+++ b/service/mysterium.service
@@ -6,7 +6,7 @@ After=network.target network-online.target
 
 [Service]
 Type=simple
-User=mysterium-node
+User=root
 Group=mysterium-node
 RuntimeDirectory=mysterium-node
 RuntimeDirectoryMode=0750
@@ -28,7 +28,7 @@ SendSIGKILL=yes
 Nice=-20
 Restart=always
 RestartSec=5
-AmbientCapabilities=CAP_NET_BIND_SERVICE
+AmbientCapabilities=CAP_NET_ADMIN CAP_NET_BIND_SERVICE CAP_NET_BROADCAST CAP_NET_RAW CAP_SYS_NICE
 StandardOutput=null
 StandardError=null
 
