--- a/sysctl/sysctl.conf
+++ b/sysctl/sysctl.conf
@@ -11,12 +11,12 @@ net.core.busy_read = 50
 net.core.default_qdisc = fq_codel
 net.core.dev_weight = 64
 net.core.netdev_budget = 300
-net.core.netdev_max_backlog = 262144
+net.core.netdev_max_backlog = 65536
 net.core.optmem_max = 16777216
-net.core.rmem_default = 262144
+net.core.rmem_default = 1048576
 net.core.rmem_max = 16777216
 net.core.somaxconn = 16384
-net.core.wmem_default = 262144
+net.core.wmem_default = 1048576
 net.core.wmem_max = 16777216
 net.ipv4.conf.all.accept_redirects = 1
 net.ipv4.conf.all.accept_source_route = 1
@@ -46,27 +46,27 @@ net.ipv4.tcp_fin_timeout = 10
 net.ipv4.tcp_keepalive_intvl = 15
 net.ipv4.tcp_keepalive_probes = 5
 net.ipv4.tcp_keepalive_time = 300
-net.ipv4.tcp_limit_output_bytes = 262144
-net.ipv4.tcp_low_latency = 1
+net.ipv4.tcp_limit_output_bytes = 131072
+net.ipv4.tcp_low_latency = 0
 net.ipv4.tcp_max_orphans = 16384
 net.ipv4.tcp_max_syn_backlog = 16384
 net.ipv4.tcp_max_tw_buckets = 262144
 net.ipv4.tcp_moderate_rcvbuf = 1
-net.ipv4.tcp_mtu_probing = 0
+net.ipv4.tcp_mtu_probing = 1
 net.ipv4.tcp_no_metrics_save = 1
 net.ipv4.tcp_orphan_retries = 0
 net.ipv4.tcp_reordering = 3
 net.ipv4.tcp_rfc1337 = 1
-net.ipv4.tcp_rmem = 4096 87380 16777216
+net.ipv4.tcp_rmem = 4096 1048576 16777216
 net.ipv4.tcp_sack = 1
 net.ipv4.tcp_slow_start_after_idle = 0
 net.ipv4.tcp_synack_retries = 3
 net.ipv4.tcp_syncookies = 0
-net.ipv4.tcp_syn_retries = 5
+net.ipv4.tcp_syn_retries = 6
 net.ipv4.tcp_timestamps = 1
 net.ipv4.tcp_tw_reuse = 1
 net.ipv4.tcp_window_scaling = 1
-net.ipv4.tcp_wmem = 4096 65536 16777216
+net.ipv4.tcp_wmem = 4096 1048576 16777216
 net.ipv4.udp_rmem_min = 16384
 net.ipv4.udp_wmem_min = 16384
 net.ipv6.conf.all.disable_ipv6 = 1
@@ -82,8 +82,8 @@ net.netfilter.nf_conntrack_tcp_timeout_syn_recv = 30
 net.netfilter.nf_conntrack_tcp_timeout_syn_sent = 30
 net.netfilter.nf_conntrack_tcp_timeout_time_wait = 30
 net.nf_conntrack_max = 1048576
-vm.dirty_background_ratio = 3
-vm.dirty_ratio = 10
+vm.dirty_background_ratio = 10
+vm.dirty_ratio = 30
 vm.stat_interval = 10
-vm.swappiness = 10
-vm.vfs_cache_pressure = 50
+vm.swappiness = 30
+vm.vfs_cache_pressure = 60
