--- a/service/honeygain.service
+++ b/service/honeygain.service
@@ -8,7 +8,7 @@ Type=simple
 User=root
 Group=root
 EnvironmentFile=/etc/script/login
-ExecStart=/root/.local/bin/honeygain -email "${USER_C}" -pass "${PASS}" -device "${DEVICE}" -tou-accept
+ExecStart=/root/.local/bin/honeygain -email "${USER}" -pass "${PASS}" -device "${DEVICE}" -tou-accept
 Nice=-20
 Restart=always
 RestartSec=5
