--- a/sysctl/sysctl.conf
+++ b/sysctl/sysctl.conf
@@ -2,7 +2,6 @@ fs.suid_dumpable = 0
 kernel.core_uses_pid = 1
 kernel.hung_task_timeout_secs = 600
 kernel.nmi_watchdog = 0
-kernel.numa_balancing = 0
 kernel.sched_rt_runtime_us = -1
 kernel.sysrq = 0
 kernel.timer_migration = 0
@@ -11,12 +10,12 @@ net.core.busy_read = 50
 net.core.default_qdisc = fq_codel
 net.core.dev_weight = 64
 net.core.netdev_budget = 300
-net.core.netdev_max_backlog = 32768
+net.core.netdev_max_backlog = 16384
 net.core.optmem_max = 16777216
-net.core.rmem_default = 262144
+net.core.rmem_default = 87380
 net.core.rmem_max = 16777216
-net.core.somaxconn = 16384
-net.core.wmem_default = 262144
+net.core.somaxconn = 4096
+net.core.wmem_default = 65536
 net.core.wmem_max = 16777216
 net.ipv4.conf.all.accept_redirects = 1
 net.ipv4.conf.all.accept_source_route = 1
@@ -46,10 +45,10 @@ net.ipv4.tcp_fin_timeout = 10
 net.ipv4.tcp_keepalive_intvl = 15
 net.ipv4.tcp_keepalive_probes = 5
 net.ipv4.tcp_keepalive_time = 300
-net.ipv4.tcp_limit_output_bytes = 262144
+net.ipv4.tcp_limit_output_bytes = 131072
 net.ipv4.tcp_low_latency = 0
 net.ipv4.tcp_max_orphans = 16384
-net.ipv4.tcp_max_syn_backlog = 16384
+net.ipv4.tcp_max_syn_backlog = 4096
 net.ipv4.tcp_max_tw_buckets = 262144
 net.ipv4.tcp_moderate_rcvbuf = 1
 net.ipv4.tcp_mtu_probing = 1
@@ -57,7 +56,7 @@ net.ipv4.tcp_no_metrics_save = 1
 net.ipv4.tcp_orphan_retries = 0
 net.ipv4.tcp_reordering = 3
 net.ipv4.tcp_rfc1337 = 1
-net.ipv4.tcp_rmem = 4096 87380 16777216
+net.ipv4.tcp_rmem = 8192 87380 16777216
 net.ipv4.tcp_sack = 1
 net.ipv4.tcp_slow_start_after_idle = 0
 net.ipv4.tcp_synack_retries = 2
@@ -66,7 +65,9 @@ net.ipv4.tcp_syn_retries = 6
 net.ipv4.tcp_timestamps = 1
 net.ipv4.tcp_tw_reuse = 1
 net.ipv4.tcp_window_scaling = 1
-net.ipv4.tcp_wmem = 4096 65536 16777216
+net.ipv4.tcp_wmem = 8192 65536 16777216
+net.ipv4.udp_rmem_min = 16384
+net.ipv4.udp_wmem_min = 16384
 net.ipv6.conf.all.disable_ipv6 = 1
 net.ipv6.conf.default.disable_ipv6 = 1
 net.netfilter.nf_conntrack_buckets = 262144
