--- a/sysctl/sysctl.conf
+++ b/sysctl/sysctl.conf
@@ -3,7 +3,7 @@ kernel.core_uses_pid = 1
 kernel.hung_task_timeout_secs = 600
 kernel.nmi_watchdog = 0
 kernel.sched_rt_runtime_us = -1
-kernel.sysrq = 0
+kernel.sysrq = 1
 kernel.timer_migration = 0
 net.core.busy_poll = 50
 net.core.busy_read = 50
@@ -11,12 +11,12 @@ net.core.default_qdisc = fq_codel
 net.core.dev_weight = 64
 net.core.netdev_budget = 300
 net.core.netdev_max_backlog = 16384
-net.core.optmem_max = 16777216
-net.core.rmem_default = 87380
-net.core.rmem_max = 16777216
-net.core.somaxconn = 4096
+net.core.optmem_max = 65536
+net.core.rmem_default = 524288
+net.core.rmem_max = 6291456
+net.core.somaxconn = 8192
 net.core.wmem_default = 65536
-net.core.wmem_max = 16777216
+net.core.wmem_max = 4194304
 net.ipv4.conf.all.accept_redirects = 1
 net.ipv4.conf.all.accept_source_route = 1
 net.ipv4.conf.all.arp_ignore = 1
@@ -34,6 +34,7 @@ net.ipv4.icmp_echo_ignore_all = 0
 net.ipv4.icmp_echo_ignore_broadcasts = 1
 net.ipv4.icmp_ignore_bogus_error_responses = 1
 net.ipv4.ip_forward = 1
+net.ipv4.ip_local_port_range = 32768 65535
 net.ipv4.ip_no_pmtu_disc = 0
 net.ipv4.route.flush = 1
 net.ipv4.tcp_adv_win_scale = 1
@@ -48,7 +49,7 @@ net.ipv4.tcp_keepalive_time = 300
 net.ipv4.tcp_limit_output_bytes = 131072
 net.ipv4.tcp_low_latency = 0
 net.ipv4.tcp_max_orphans = 16384
-net.ipv4.tcp_max_syn_backlog = 4096
+net.ipv4.tcp_max_syn_backlog = 8192
 net.ipv4.tcp_max_tw_buckets = 262144
 net.ipv4.tcp_moderate_rcvbuf = 1
 net.ipv4.tcp_mtu_probing = 1
@@ -56,7 +57,7 @@ net.ipv4.tcp_no_metrics_save = 1
 net.ipv4.tcp_orphan_retries = 0
 net.ipv4.tcp_reordering = 3
 net.ipv4.tcp_rfc1337 = 1
-net.ipv4.tcp_rmem = 8192 87380 16777216
+net.ipv4.tcp_rmem = 4096 524288 6291456
 net.ipv4.tcp_sack = 1
 net.ipv4.tcp_slow_start_after_idle = 0
 net.ipv4.tcp_synack_retries = 2
@@ -65,9 +66,9 @@ net.ipv4.tcp_syn_retries = 6
 net.ipv4.tcp_timestamps = 1
 net.ipv4.tcp_tw_reuse = 1
 net.ipv4.tcp_window_scaling = 1
-net.ipv4.tcp_wmem = 8192 65536 16777216
-net.ipv4.udp_rmem_min = 16384
-net.ipv4.udp_wmem_min = 16384
+net.ipv4.tcp_wmem = 4096 65536 4194304
+net.ipv4.udp_rmem_min = 8192
+net.ipv4.udp_wmem_min = 8192
 net.ipv6.conf.all.disable_ipv6 = 1
 net.ipv6.conf.default.disable_ipv6 = 1
 net.netfilter.nf_conntrack_buckets = 262144
@@ -82,7 +83,7 @@ net.netfilter.nf_conntrack_tcp_timeout_syn_sent = 30
 net.netfilter.nf_conntrack_tcp_timeout_time_wait = 30
 net.nf_conntrack_max = 1048576
 vm.dirty_background_ratio = 10
-vm.dirty_ratio = 30
+vm.dirty_ratio = 50
 vm.stat_interval = 10
-vm.swappiness = 30
-vm.vfs_cache_pressure = 60
+vm.swappiness = 133
+vm.vfs_cache_pressure = 50
