--- a/sysctl/sysctl.conf
+++ b/sysctl/sysctl.conf
@@ -2,6 +2,7 @@ fs.suid_dumpable = 0
 kernel.core_uses_pid = 1
 kernel.hung_task_timeout_secs = 600
 kernel.nmi_watchdog = 0
+kernel.numa_balancing = 0
 kernel.sched_rt_runtime_us = -1
 kernel.sysrq = 0
 kernel.timer_migration = 0
@@ -47,7 +48,7 @@ net.ipv4.tcp_keepalive_intvl = 15
 net.ipv4.tcp_keepalive_probes = 5
 net.ipv4.tcp_keepalive_time = 300
 net.ipv4.tcp_limit_output_bytes = 262144
-net.ipv4.tcp_low_latency = 0
+net.ipv4.tcp_low_latency = 1
 net.ipv4.tcp_max_orphans = 16384
 net.ipv4.tcp_max_syn_backlog = 8192
 net.ipv4.tcp_max_tw_buckets = 262144
@@ -62,7 +63,7 @@ net.ipv4.tcp_sack = 1
 net.ipv4.tcp_slow_start_after_idle = 0
 net.ipv4.tcp_synack_retries = 2
 net.ipv4.tcp_syncookies = 0
-net.ipv4.tcp_syn_retries = 6
+net.ipv4.tcp_syn_retries = 5
 net.ipv4.tcp_timestamps = 1
 net.ipv4.tcp_tw_reuse = 1
 net.ipv4.tcp_window_scaling = 1
