--- a/etc/sysctl.conf
+++ b/etc/sysctl.conf
@@ -13,10 +13,10 @@ net.core.dev_weight = 64
 net.core.netdev_budget = 300
 net.core.netdev_max_backlog = 16384
 net.core.optmem_max = 1048576
-net.core.rmem_default = 262144
+net.core.rmem_default = 87380
 net.core.rmem_max = 16777216
 net.core.somaxconn = 8192
-net.core.wmem_default = 262144
+net.core.wmem_default = 65536
 net.core.wmem_max = 16777216
 net.ipv4.conf.all.accept_redirects = 1
 net.ipv4.conf.all.accept_source_route = 1
@@ -47,7 +47,7 @@ net.ipv4.tcp_fin_timeout = 10
 net.ipv4.tcp_keepalive_intvl = 15
 net.ipv4.tcp_keepalive_probes = 5
 net.ipv4.tcp_keepalive_time = 300
-net.ipv4.tcp_limit_output_bytes = 262144
+net.ipv4.tcp_limit_output_bytes = 131072
 net.ipv4.tcp_low_latency = 0
 net.ipv4.tcp_max_orphans = 16384
 net.ipv4.tcp_max_syn_backlog = 8192
@@ -69,6 +69,7 @@ net.ipv4.tcp_tw_reuse = 1
 net.ipv4.tcp_window_scaling = 1
 net.ipv4.tcp_wmem = 4096 65536 16777216
 net.ipv6.conf.all.forwarding = 1
+net.ipv6.route.flush = 1
 net.netfilter.nf_conntrack_buckets = 262144
 net.netfilter.nf_conntrack_expect_max = 4096
 net.netfilter.nf_conntrack_generic_timeout = 30
