--- a/sysctl/sysctl.conf
+++ b/sysctl/sysctl.conf
@@ -47,7 +47,7 @@ net.ipv4.tcp_fin_timeout = 10
 net.ipv4.tcp_keepalive_intvl = 15
 net.ipv4.tcp_keepalive_probes = 5
 net.ipv4.tcp_keepalive_time = 300
-net.ipv4.tcp_limit_output_bytes = 262144
+net.ipv4.tcp_limit_output_bytes = 131072
 net.ipv4.tcp_low_latency = 0
 net.ipv4.tcp_max_orphans = 16384
 net.ipv4.tcp_max_syn_backlog = 8192
@@ -63,12 +63,13 @@ net.ipv4.tcp_sack = 1
 net.ipv4.tcp_slow_start_after_idle = 0
 net.ipv4.tcp_synack_retries = 2
 net.ipv4.tcp_syncookies = 0
-net.ipv4.tcp_syn_retries = 6
+net.ipv4.tcp_syn_retries = 5
 net.ipv4.tcp_timestamps = 1
 net.ipv4.tcp_tw_reuse = 1
 net.ipv4.tcp_window_scaling = 1
 net.ipv4.tcp_wmem = 4096 65536 16777216
 net.ipv6.conf.all.forwarding = 1
+net.ipv6.route.flush = 1
 net.netfilter.nf_conntrack_buckets = 262144
 net.netfilter.nf_conntrack_expect_max = 4096
 net.netfilter.nf_conntrack_generic_timeout = 30
@@ -80,8 +81,8 @@ net.netfilter.nf_conntrack_tcp_timeout_syn_recv = 30
 net.netfilter.nf_conntrack_tcp_timeout_syn_sent = 30
 net.netfilter.nf_conntrack_tcp_timeout_time_wait = 30
 net.nf_conntrack_max = 1048576
-vm.dirty_background_ratio = 10
-vm.dirty_ratio = 50
+vm.dirty_background_ratio = 3
+vm.dirty_ratio = 10
 vm.stat_interval = 10
-vm.swappiness = 100
+vm.swappiness = 10
 vm.vfs_cache_pressure = 50
